Firefox Support : Fixes unscrollable scrollbar

--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -19,7 +19,9 @@
   top: -1px;
   overflow: scroll;
   max-height: 100vh;
-
+  // To hide scrollbar in Firefox
+  scrollbar-width: none;
+  // To hide scrollbar in Chrome
   &::-webkit-scrollbar {
     width: 0 !important;
   }
